dbdeploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: vprodb
  labels:
    app: vprodb
spec:
  replicas: 1
  selector:
    matchLabels: 
      app: vprodb
  template: 
    metadata:
      labels:
        app: vprodb
    spec:
      containers:
        - name: vrpdb
          image: gopiadi/db
          volumeMounts:/var/lib/mysql
          ports: 
            - name: vprodb-port
              containerPort: 3306
      volumes: 
        - name: vpro-db-pass
          persistenceVolumeClaim:
            claimName: db-pv-claim

      initContainer: 
        - name: busybox
          image: busybox
          args: ["rm","-rf","/var/lib/mysql/lost+found"]
          volumes: 
        - name: vpro-db-pass
          persistenceVolumeClaim:
            claimName: db-pv-claim
