memcached-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: memcached
  labels:
    app: memcached
spec:
  replicas: 1  # Number of replicas (adjust as needed)
  selector:
    matchLabels:
      app: memcached
  template:
    metadata:
      labels:
        app: memcached
    spec:
      containers:
        - name: memcached
          image: memcached:latest  # Use the latest Memcached image
          ports:
            - containerPort: 11211  # Memcached default port
