tom-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vproapp
  labels:
    app: vproapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vproapp
  template:
    metadata:
      labels:
        app: vproapp
    spec:
      containers:
        - name: gopiadi-app
          image: gopiadi/app
          ports:
            - containerPort: 8080  # Adjust this based on your app's listening port
