app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vproapp-service
  labels:
    app: vproapp
spec:
  selector:
    app: vproapp # This selector should match the label of the gopiadi/app pod
  ports:
    - protocol: TCP
      port: 80           # This is the port exposed by the service
      targetPort: 8080    # This is the port the container is listening on
  type: ClusterIP        # Default service type for internal cluster communication
