rmq-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-service
  labels:
    app: rabbitmq
spec:
  selector:
    app: rabbitmq
  ports:
    - protocol: TCP
      port: 5672  # The port the service will expose for AMQP
      targetPort: 5672  # The port the container listens on for AMQP
    - protocol: TCP
      port: 15672  # The port for the management UI
      targetPort: 15672  # The port the container listens on for management UI
  type: ClusterIP  # Expose the service internally within the cluster
